<resources>
    <string name="ps_camera_roll">CameraRoll</string>
    <string name="ps_camera_roll_num">%1$s (%2$d)</string>
    <string name="ps_cancel">Cancel</string>
    <string name="ps_take_picture">Shot</string>
    <string name="ps_rule">not pictures or video</string>
    <string name="ps_min_video_num">Video Selection Cannot%1$sNumber</string>
    <string name="ps_message_max_num">Select up to %1$s images</string>
    <string name="ps_message_audio_max_num">Select up to %1$s Audio</string>
    <string name="ps_message_video_max_num">Select up to %1$s Video</string>
    <string name="ps_preview">Preview</string>
    <string name="ps_please">Please later…</string>
    <string name="ps_done_front_num">%1$d/%2$d Ok</string>
    <string name="ps_completed">Completed</string>
    <string name="ps_done">Complete</string>
    <string name="ps_please_select">Please Select</string>
    <string name="ps_empty_title">No video or photos\n</string>
    <string name="ps_empty_audio_title">No audio file\n</string>
    <string name="ps_audio_empty">You can use system recordings to record audio</string>
    <string name="ps_empty">you can use your camera to take photos or videos</string>
    <string name="ps_min_img_num">The minimum selection of pictures shall not be less than %1$s</string>
    <string name="ps_min_audio_num">The minimum audio selection cannot be less than %1$s</string>
    <string name="ps_gif_tag">gif</string>
    <string name="ps_webp_tag">webp</string>
    <string name="ps_audio">Access to system recording permission denied</string>
    <string name="ps_jurisdiction">Read memory card access denied</string>
    <string name="ps_camera">Get system camera permission denied</string>
    <string name="ps_video_toast">Video not Preview</string>
    <string name="ps_record_video">Record Video</string>
    <string name="ps_photograph">Take Picture</string>
    <string name="ps_long_chart">Long</string>
    <string name="ps_warning">No Media files!</string>
    <string name="ps_prompt">Prompt</string>
    <string name="ps_prompt_image_content">Do you want to save pictures to your phone?</string>
    <string name="ps_prompt_video_content">Do you want to save video to your phone?</string>
    <string name="ps_save_image_error">Picture save failed</string>
    <string name="ps_save_video_error">Video save failed</string>
    <string name="ps_save_success">save successfully until</string>
    <string name="ps_all_audio">All audio</string>
    <string name="ps_tape">Tape</string>
    <string name="ps_play_audio">Play</string>
    <string name="ps_stop_audio">Stop</string>
    <string name="ps_quit_audio">Quit</string>
    <string name="ps_pause_audio">Pause</string>
    <string name="ps_error">The picture is corrupted</string>
    <string name="ps_video_error">The video is corrupted</string>
    <string name="ps_audio_error">The audio is corrupted</string>
    <string name="ps_save_audio_error">Audio save failed</string>
    <string name="ps_save_error">Save failed</string>
    <string name="ps_prompt_audio_content">Save audio to phone？</string>
    <string name="ps_confirm">Confirm</string>
    <string name="ps_preview_image_num">%1$d/%2$d</string>
    <string name="ps_not_crop_data">No cropped data</string>
    <string name="ps_original_image">Original (%1$s)</string>
    <string name="ps_default_original_image">Original</string>
    <string name="ps_send">Complete</string>
    <string name="ps_send_num">Complete(%1$d/%2$d)</string>
    <string name="ps_preview_num">Preview(%1$d)</string>
    <string name="ps_select">Choose</string>
    <string name="ps_data_exception">Get album data exception…</string>
    <string name="ps_choose_max_seconds">You can only select videos within %1$ds</string>
    <string name="ps_choose_min_seconds">You cannot select a video less than %1$ds</string>
    <string name="ps_choose_limit_seconds">Only videos from %1$ds to %2$ds can be selected</string>

    <string name="ps_go_setting">Go Setting</string>
    <string name="ps_know">OK</string>
    <string name="ps_data_null">There no data here…</string>
    <string name="ps_editor">Editor</string>
    <string name="ps_use_camera">Using camera</string>
    <string name="ps_use_sound">Using recording function</string>
    <string name="ps_current_week">This week</string>
    <string name="ps_current_month">This month</string>
    <string name="ps_select_max_size">The selected file is larger than %1$s</string>
    <string name="ps_select_min_size">The selected file is less than %1$s</string>

    <string name="ps_select_video_max_second">Select video for more than %1$d s</string>
    <string name="ps_select_video_min_second">Select video for less than %1$d s</string>
    <string name="ps_select_audio_max_second">Select audio for more than %1$d s</string>
    <string name="ps_select_audio_min_second">Select audio for less than %1$d s</string>
    <string name="ps_select_no_support">Unsupported selection type</string>
</resources>