<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Do not delete or change the View ID-->

    <com.luck.picture.lib.widget.RecyclerPreloadView
        android:id="@+id/ps_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/ps_color_black"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/ps_bottom_nar_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ps_title_bar" />

    <com.luck.picture.lib.widget.MediumBoldTextView
        android:id="@+id/ps_tv_data_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ps_ic_no_data"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/ps_empty"
        android:textColor="@color/ps_color_aab2bd"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <!--titleBar area star-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ps_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ps_color_grey"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/ps_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ps_iv_left_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/ps_ic_white_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ps_status_bar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ps_status_bar">

            <com.luck.picture.lib.widget.MarqueeTextView
                android:id="@+id/ps_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:includeFontPadding="false"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxEms="6"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/ps_camera_roll"
                android:textColor="@color/ps_color_white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ps_iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/ps_ic_default_arrow" />
        </LinearLayout>

        <com.luck.picture.lib.widget.MediumBoldTextView
            android:id="@+id/ps_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ps_cancel_default_bg"
            android:gravity="center"
            android:text="@string/ps_cancel"
            android:textColor="@color/ps_color_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ps_status_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.luck.picture.lib.widget.MediumBoldTextView
        android:id="@+id/ps_tv_current_data_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@color/ps_color_99_black"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textColor="@color/ps_color_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ps_title_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ps_bottom_nar_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/ps_color_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <com.luck.picture.lib.widget.StyleTextView
            android:id="@+id/ps_tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/ps_preview"
            android:textColor="@color/ps_color_9b"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:psNormalText="@string/ps_preview"
            app:psNormalTextColor="@color/ps_color_9b"
            app:psNormalTextSize="14sp"
            app:psSelectedText="@string/ps_preview_num"
            app:psSelectedTextColor="@color/ps_color_fa632d"
            app:psSelectedTextSize="14sp" />


        <com.luck.picture.lib.widget.MediumBoldTextView
            android:id="@+id/ps_tv_original"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ps_original_checkbox"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/ps_default_original_image"
            android:textColor="@color/ps_color_white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.luck.picture.lib.widget.MediumBoldTextView
            android:id="@+id/ps_tv_select_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ps_default_num_oval"
            android:gravity="center"
            android:textColor="@color/ps_color_white"
            android:textSize="11sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/ps_tv_complete"
            app:layout_constraintRight_toLeftOf="@+id/ps_tv_complete"
            app:layout_constraintTop_toTopOf="@+id/ps_tv_complete"
            tools:text="1"
            tools:visibility="visible" />

        <com.luck.picture.lib.widget.StyleTextView
            android:id="@+id/ps_tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:gravity="center"
            android:paddingRight="15dp"
            android:text="@string/ps_please_select"
            android:textColor="@color/ps_color_9b"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:psNormalText="@string/ps_please_select"
            app:psNormalTextColor="@color/ps_color_9b"
            app:psNormalTextSize="14sp"
            app:psSelectedText="@string/ps_completed"
            app:psSelectedTextColor="@color/ps_color_fa632d"
            app:psSelectedTextSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>