<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--content area star-->
    <com.luck.picture.lib.magical.MagicalView
        android:id="@+id/magical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--content area end-->


    <!--titleBar area star-->
    <View
        android:id="@+id/ps_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ps_color_grey"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ps_title_bar_bg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/ps_color_grey"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ps_status_bar" />

    <ImageView
        android:id="@+id/ps_iv_left_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/ps_ic_white_back"
        app:layout_constraintBottom_toBottomOf="@+id/ps_title_bar_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ps_title_bar_bg" />

    <com.luck.picture.lib.widget.MarqueeTextView
        android:id="@+id/ps_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:includeFontPadding="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxEms="6"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@color/ps_color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ps_title_bar_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ps_title_bar_bg"
        tools:text="0/0" />


    <com.luck.picture.lib.widget.StyleTextView
        android:id="@+id/ps_tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/ps_select_complete_bg"
        android:gravity="center"
        android:text="@string/ps_send"
        android:textColor="@color/ps_color_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/ps_title_bar_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ps_title_bar_bg"
        app:psNormalBackground="@drawable/ps_select_complete_bg"
        app:psNormalText="@string/ps_send"
        app:psNormalTextColor="@color/ps_color_white"
        app:psNormalTextSize="14sp"
        app:psSelectedBackground="@drawable/ps_select_complete_bg"
        app:psSelectedText="@string/ps_send_num"
        app:psSelectedTextColor="@color/ps_color_white"
        app:psSelectedTextSize="14sp" />

    <!--titleBar area end-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ps_rv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ps_preview_gallery_bg"
        app:layout_constraintBottom_toTopOf="@+id/ps_bottom_nar_bar_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--bottomBar area start-->

    <View
        android:id="@+id/ps_bottom_nar_bar_bg"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/ps_color_grey"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.luck.picture.lib.widget.MediumBoldTextView
        android:id="@+id/ps_tv_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/ps_editor"
        android:textColor="@color/ps_color_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/ps_bottom_nar_bar_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ps_bottom_nar_bar_bg" />


    <com.luck.picture.lib.widget.MediumBoldTextView
        android:id="@+id/ps_tv_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ps_original_checkbox"
        android:drawablePadding="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ps_default_original_image"
        android:textColor="@color/ps_color_white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ps_bottom_nar_bar_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ps_bottom_nar_bar_bg"
        tools:visibility="visible" />


    <com.luck.picture.lib.widget.MediumBoldTextView
        android:id="@+id/ps_tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/ps_preview_checkbox_selector"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/ps_select"
        android:textColor="@color/ps_color_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ps_bottom_nar_bar_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ps_bottom_nar_bar_bg" />

    <!--bottomBar area end-->

</androidx.constraintlayout.widget.ConstraintLayout>