<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ps_dialog_shadow">

    <TextView
        android:id="@+id/tv_musicStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/ps_play_audio"
        android:textColor="@color/ps_color_9b"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rlSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_musicStatus"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center_vertical">

        <!--显示当前进度-->
        <TextView
            android:id="@+id/tv_musicTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="00:00"
            android:textColor="@color/ps_color_9b"
            android:textSize="12sp" />


        <SeekBar
            android:id="@+id/music_seek_bar"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/tv_musicTime"
            android:max="100"
            android:maxHeight="4.0dp"
            android:minHeight="4.0dp"
            android:progressDrawable="@drawable/ps_layer_progress"
            android:thumb="@drawable/ps_seek_bar_thumb"
            android:thumbOffset="0dp" />

        <!--显示总进度-->
        <TextView
            android:id="@+id/tv_music_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/music_seek_bar"
            android:text="00:00"
            android:textColor="@color/ps_color_9b"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlSeekBar"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_play_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/ps_btn_music_shape"
            android:gravity="center"
            android:text="@string/ps_play_audio"
            android:textColor="@color/ps_color_white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/ps_btn_music_shape"
            android:gravity="center"
            android:text="@string/ps_stop_audio"
            android:textColor="@color/ps_color_white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:background="@drawable/ps_btn_music_shape"
            android:gravity="center"
            android:text="@string/ps_quit_audio"
            android:textColor="@color/ps_color_white"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>

